<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distancia</string>
    <string name="Total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_por_liters">Preço por litro</string>
    <string name="autonomy_value">Autonomia</string>
    <string name="kms_per_liters">Kms Por Litro</string>
    <string name="spent">SEU GASTO TOTAL SERA DE:</string>
    <string name="value_">R$ 0</string>
    <string name="button">CALCULAR</string>
    <string name="banner">calculadora de distancia</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>