<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/banner"
        android:textAllCaps="true"
        android:textColor="#009688"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/distance"
        android:inputType="number"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="23dp"
        android:text="@string/Total_km" />


    <EditText
        android:id="@+id/price_lts"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="23dp"
        android:text="@string/price_por_liters" />

    <EditText
        android:id="@+id/autonomy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/autonomy_value"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:text="@string/kms_per_liters" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/spent"
        android:textColor="#4800FF" />


    <TextView
        android:id="@+id/value_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="15dp"
        android:text="@string/value_"
        android:textColor="#0800DA"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/button"
        android:textColor="@color/white" />


</LinearLayout>